; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_siphash_prov.c_siphash_update.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_siphash_prov.c_siphash_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.siphash_data_st = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64)* @siphash_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @siphash_update(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.siphash_data_st*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.siphash_data_st*
  store %struct.siphash_data_st* %9, %struct.siphash_data_st** %7, align 8
  %10 = load %struct.siphash_data_st*, %struct.siphash_data_st** %7, align 8
  %11 = getelementptr inbounds %struct.siphash_data_st, %struct.siphash_data_st* %10, i32 0, i32 0
  %12 = load i8*, i8** %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @SipHash_Update(i32* %11, i8* %12, i64 %13)
  ret i32 1
}

declare dso_local i32 @SipHash_Update(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
